# bdk-ffi

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE-MIT  MultisigTaprootTransaction.kt  Package.swift  README.md  bdk_ffi_test.c  build-local-swift.sh  build.gradle  build.gradle.kts  build.rs  build.sh  clippy.toml  crates.js  docs-0.4.0.patch  docs.patch  generate.sh  help.html  index.html  local.properties  main.c  parse-commits.sh  requirements-dev.txt  search-index.js  settings.gradle  settings.gradle.kts  settings.html  setup.py  src-files.js  test.sh  tox.ini
.github/: CODEOWNERS  pull_request_template.md  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  minor_release.md  patch_release.md  release.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: android-api-docs.yaml  audit.yaml  audit.yml  build-python-wheels.yaml  build.yml  cont_integration.yml  diff-check.yaml  kotlin-api-docs.yaml  live-tests.yaml  publish-android.yaml  publish-jvm.yaml  publish-python.yaml  publish-spm.yaml  python-api-docs.yaml  rust-ci.yaml  test-android.yaml  test-jvm.yaml  test-python.yaml  test-swift.yaml  test.yaml  trigger-external-bindings.yml  zizmor.yaml
Sources/BitcoinDevKit/: BitcoinDevKit.swift
Tests/BitcoinDevKitTests/: BitcoinDevKitTests.swift
android/: Module.md  build.gradle  build.gradle.kts
api-docs/: Module.md  README.md  build.gradle.kts  settings.gradle.kts
api-docs/python/: README.md
bdk-android/: README.md  build.gradle.kts  gradle.properties  justfile  settings.gradle.kts
bdk-android/lib/: README.md  build.gradle.kts
bdk-android/plugins/: README.md
bdk-android/scripts/: build-linux-x86_64.sh  build-macos-aarch64.sh  build-windows-x86_64.sh
bdk-dart/: pubspec.yaml
bdk-dart/.dart_tool/: package_config.json  package_graph.json
bdk-dart/example/: generate_wallet.dart
bdk-dart/lib/: bdk.dart
bdk-dart/scripts/: generate_bindings.sh
bdk-dart/test/: descriptor_test.dart  mnemonic_test.dart  offline_persistence_test.dart  offline_wallet_test.dart  test_constants.dart  wallet_behavior_test.dart  wallet_creation_test.dart
bdk-ffi/: Cargo.toml  README.md  build.rs  deploy-docs.sh  justfile  uniffi-bindgen.rs  uniffi.toml
bdk-ffi-bindgen/: Cargo.toml
bdk-ffi-bindgen/src/: main.rs
bdk-ffi/.cargo/: config.toml
bdk-ffi/bdk-ffi-bindgen/: Cargo.toml
bdk-ffi/scripts/: build-docs.sh  deploy-docs.sh
bdk-ffi/src/: bdk.udl  bitcoin.rs  blockchain.rs  database.rs  descriptor.rs  electrum.rs  error.rs  esplora.rs  keys.rs  kyoto.rs  lib.rs  macros.rs  psbt.rs  signer.rs  store.rs  tx_builder.rs  types.rs  wallet.rs
bdk-ffi/src/tests/: bitcoin.rs  descriptor.rs  error.rs  keys.rs  tx_builder.rs  wallet.rs
bdk-ffi/tests/: README.md  bitcoin.rs  descriptor.rs  error.rs  keys.rs  test_generated_bindings.rs  tx_builder.rs
bdk-ffi/tests/bindings/: test.kts  test.py  test.swift
bdk-jvm/: README.md  build.gradle.kts  gradle.properties  justfile  settings.gradle.kts
bdk-jvm/examples/: build.gradle.kts
bdk-jvm/lib/: README.md  build.gradle.kts
bdk-jvm/plugins/: README.md
bdk-jvm/scripts/: build-linux-x86_64.sh  build-macos-aarch64.sh  build-macos-x86_64.sh  build-windows-x86_64.sh
bdk-kotlin/: .editorconfig  .gitignore  PGP-BDK-BINDINGS.asc  README.md  build.gradle  settings.gradle
bdk-kotlin/aar/: build.gradle
bdk-kotlin/android/: build.gradle  proguard-rules.pro
bdk-kotlin/api-docs/: Module1.md  build.gradle.kts  deploy.sh
bdk-kotlin/bdk-android/: settings.gradle.kts
bdk-kotlin/bdk-jvm/: settings.gradle.kts
bdk-kotlin/jar/: build.gradle
bdk-kotlin/jvm/: build.gradle
bdk-kotlin/test-fixtures/: build.gradle
bdk-python/: .gitignore  .gitmodules  MANIFEST.in  README.md  generate.sh  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  shell.nix  tox.ini
bdk-python/.github/: pull_request_template.md
bdk-python/bdk-ffi/: CHANGELOG.md  DEVELOPMENT_CYCLE.md  uniffi.toml
bdk-python/docs/: api.rst  conf.py  index.rst
bdk-python/nix/: uniffi_0.15.2_cargo_lock.patch  uniffi_bindgen.nix
bdk-python/scripts/: generate-linux.sh  generate-macos-arm64.sh  generate-macos-x86_64.sh  generate-windows.sh  generate_docs.py
bdk-python/tests/: test_bdk.py  test_live_kyoto.py  test_live_tx_builder.py  test_live_wallet.py  test_offline_custom_persist.py  test_offline_descriptor.py  test_offline_wallet.py
bdk-swift/: .gitmodules  Package.swift  README.md  build-local-swift.sh  build-xcframework-dev.sh  build-xcframework.sh  justfile  pre_existing_wallet_persistence_test.sqlite
bdk-swift/bdk.swift/: Package.resolved  Package.swift  README.md
bdk-swift/bdkFFI.xcframework/: Info.plist
bdk-wasm/: Cargo.toml  README.md
bdk-wasm/src/: main.rs
bdkFFI.xcframework/: Info.plist
bdkffi/: all.html  index.html  macro.impl_from_core_type!.html  macro.impl_from_core_type.html  macro.impl_hash_like!.html  macro.impl_hash_like.html  macro.impl_into_core_type!.html  macro.impl_into_core_type.html  sidebar-items.js
bdkffi/bitcoin/: enum.AddressData.html  enum.ChildNumber.html  index.html  sidebar-items.js  struct.Address.html  struct.Amount.html  struct.Block.html  struct.BlockHash.html  struct.ControlBlock.html  struct.DescriptorId.html  (+27 more)
bindings/: bdk-swift.swiftdoc  bdk-swift.swiftsourceinfo
buildSrc/: README.md  build.gradle.kts
cc/: bdk_ffi.h  bdk_ffi_test.c
demo/: build.gradle
docs/: python-packaging.md
jvm/: Module.md  build.gradle  build.gradle.kts
kotlin/: README.md  build.gradle.kts  justfile  settings.gradle.kts
kotlin-api-docs/: Module2.md
maintainers/: changelog.sh
nix/: uniffi_0.14.1_cargo_lock.patch
plugins/: README.md  build.gradle.kts  settings.gradle.kts
rust/: Cargo.toml  justfile
src/: bdk-python.udl  bdk.udl  error.rs  lib.rs  types.rs  wallet-bdk.py  wallet.rs
swift/: Package.swift  Package.swift.txt  README.md  build-xcframework-dev.sh  build-xcframework.sh  justfile
tests/: test_bdk.py
uniffi_bindgen/: all.html  fn.main.html  index.html
(+469 files in other folders)
