[package]
name = "bdk-ffi"
version = "2.0.0-alpha.0"
homepage = "https://bitcoindevkit.org"
repository = "https://github.com/bitcoindevkit/bdk"
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "bdkffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = ["uniffi/cli"]

[dependencies]
bdk_wallet = { version = "1.2.0", features = ["all-keys", "keys-bip39", "rusqlite"] }
bdk_core = { version = "0.4.1" }
bdk_esplora = { version = "0.20.1", default-features = false, features = ["std", "blocking", "blocking-https-rustls"] }
bdk_electrum = { version = "0.21.0", default-features = false, features = ["use-rustls-ring"] }
bdk_kyoto = { version = "0.10.0" }

uniffi = { version = "=0.29.1" }
thiserror = "1.0.58"

[build-dependencies]
uniffi = { version = "=0.29.1", features = ["build"] }

[dev-dependencies]
uniffi = { version = "=0.29.1", features = ["bindgen-tests"] }
assert_matches = "1.5.0"

[profile.release-smaller]
inherits = "release"
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = "debuginfo" # Partially strip symbols from binary
